--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="../img/favicon.png" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css?v=1">
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
             <div class="col-lg-3 d-none d-sm-block"></div>
 
             <div class="col-lg-3 col-6 my-auto">
-              <img class="d-flex mx-auto logo-mp" alt="Allegro Aqua" src="../img/logo-aa.png">
+              <img class="d-flex mx-auto logo-aa" alt="Allegro Aqua" src="../img/logo-aa.png">
             </div>
             <div class="col-lg-3 col-6 my-auto">
               <img class="d-flex mx-auto logo-bg" alt="Barramundi Group" src="../img/logo-bg.png">
